--- a/style.css
+++ b/style.css
@@ -11,4 +11,9 @@
     padding-left: calc(50% - 600px);
     padding-right: calc(50% - 600px);
   }
+
+  a {
+    text-decoration: none;
+  }
+  
   
